Add meta description tag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <title>Fluid Particles</title>
 
+        <meta name="description" content="Real-time particle-based 3D fluid simulation and rendering using WebGL.">
+
         <link href='https://fonts.googleapis.com/css?family=Asap:400,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="flip.css"/>
     </head>
